--- a/css/app.styl
+++ b/css/app.styl
@@ -1,2 +1,37 @@
 html, body
   margin: 0
+
+
+$reset-button
+  background: transparent
+  border: 0
+  color: inherit
+  cursor: pointer
+  display: inline-block
+  font: inherit
+  line-height: inherit
+  margin: 0
+  padding: 0
+  position: relative
+  text-decoration: none
+
+  &:disabled
+    cursor: inherit
+    opacity: 0.3
+
+  &[data-busy]::after
+    animation: busy-button-animation 1s linear infinite alternate
+    background: linear-gradient(90deg, rgba(gray, 0), rgba(gray, 0.2), rgba(gray, 0))
+    bottom: 0
+    content: ""
+    left: 0
+    position: absolute
+    top: 0
+    right: 0
+
+$generic-heading
+  font-size: 0.7em
+  font-weight: bold
+  letter-spacing: 0.1em
+  opacity: 0.7
+  text-transform: uppercase
