More styles. Footer. Refactored some of classify store

--- a/css/main.styl
+++ b/css/main.styl
@@ -2,9 +2,11 @@
 
 @require 'app'
 @require 'main-header'
+@require 'main-footer'
 
 @require 'dialog'
 @require 'forms'
+@require 'loading-indicator'
 @require 'tooltip'
 
 @require 'classify'
