--- a/css/main-header.styl
+++ b/css/main-header.styl
@@ -1,9 +1,34 @@
 .main-header
+  align-items: center
   background-color: black
   display: flex
+  justify-content: space-between
+  padding: 1em 3vw
 
-  .zooniverse-logo
-    color: white
+  .main-header-logo-link
+    flex: 0 0 25px
+
+    .zooniverse-logo
+      color: white
+
+  .main-header-nav
+    flex: 1 1 auto
+
+    .main-header-link
+      background-color: black
+      color: white
+      padding: 0.5em 1em
+      text-decoration: none
+
+      &.active
+        border: solid 2px white
+        border-radius: 15px
+
+      &:hover
+        background-color: lighten(#000000, 30%)
+
+      &:visited
+        color: white
 
   .account-bar
     color: white
