Begin reworking interface. Store multiple selection

--- a/css/classify.styl
+++ b/css/classify.styl
@@ -39,7 +39,7 @@
         .task-fade-enter, .task-fade-appear, .task-fade-leave.task-fade-leave-active
           height: 0
           opacity: 0
-          transition: height 0.75s, opacity 0.75s ease-in-out
+          transition: height 0.75s ease-in-out
 
         .task-fade-enter.task-fade-enter-active, .task-fade-appear.task-fade-appear-active
           height: 100%
