Start of fetching actual video. Style updates

--- a/css/classify.styl
+++ b/css/classify.styl
@@ -1,27 +1,28 @@
 .classify-page
-  background-color: rgb(237, 237, 236)
-  padding: 1em 3vw
+  background: url(./assets/classify-background.jpg)
+  padding: 10em 3vw
 
   .classification
     display: flex
     justify-content: center
+    margin: 0 auto
+    max-width: 1200px
 
     .subject
       display: inline-flex
-      flex: 1 1 75%
+      flex: 1 1 66%
       justify-content: center
 
       img //placeholder
-        width: 400px
-        height: 400px
+        width: 100%
+        max-height: 600px
 
     .questions-container
       background-color: white
       display: inline-flex
       flex-direction: column
       justify-content: space-between
-      flex: 1 1 25%
-      margin: 0 1em
+      flex: 1 1 33%
       padding: 1em
 
       .task-container
