--- a/css/classify.styl
+++ b/css/classify.styl
@@ -21,12 +21,16 @@
       background-color: white
       display: inline-flex
       flex-direction: column
-      justify-content: space-between
+      justify-content: flex-start
       flex: 1 1 33%
       padding: 1em
+      
+      .batman-placeholder
+        height: 100px
+        margin: 1em auto
+        width: 100px
 
       .task-container
-        background-color: rgb(237, 237, 236)
         border-radius: 6px
         margin-bottom: 1em
 
@@ -52,6 +56,34 @@
           transition: height 0.75s, opacity 0.75s ease-in-out
 
         .task
+          .question
+            font-weight: 700
+            text-align: center
+            
+          fieldset
+            border: none
+            text-align: center
+            
+            .number-input
+              background-color: transparent
+              border: none
+              font-size: 5.33em
+              text-align: center
+              vertical-align: middle
+              width: 45%
+              
+            .minus-button, .plus-button
+              @extends $reset-button
+              background-color: #f8f8f8
+              border: solid 2px darken(#f8f8f8, 20%)
+              border-radius: 4px
+              color: black
+              font-size: 1.66em
+              height: 40px
+              outline: none
+              vertical-align: middle
+              width: 40px
+            
           .task-button
             background-color: lightgrey
             border-radius: 6px
@@ -76,4 +108,4 @@
         letter-spacing: 0.1em
         padding: 1em
         text-align: center
-        text-transform: uppercase
+        text-transform: capitalize
