--- a/css/main-header.styl
+++ b/css/main-header.styl
@@ -5,7 +5,7 @@
   display: flex
   justify-content: space-between
   padding: 1em 3vw
-  position: fixed
+  position: absolute
   width: 100%
 
   .main-header-logo-link
