--- a/css/classify.styl
+++ b/css/classify.styl
@@ -1,5 +1,6 @@
 .classify-page
-  background: url(./assets/classify-background.jpg)
+  background: url(./assets/classify-background.jpg) center center no-repeat
+  background-size: cover
   padding: 10em 3vw
 
   .classification
@@ -135,12 +136,28 @@
             text-align: center
             width: 95%
 
-          .task-checkbox
-            background-color: lightgrey
-            border-radius: 6px
-            display: block
-            padding: 0.5em 1em
-            margin: 0.5em
+          .task-checkbox-container
+            display: inline-flex
+            flex-wrap: wrap
+            width: 100%
+            
+            .task-checkbox
+              background-color: #f1f3f5
+              border: solid 2px darken(#f1f3f5, 10%)
+              border-radius: 4px
+              box-sizing: border-box
+              color: #3a4959
+              display: block
+              font-size: 0.8em
+              margin: 0.5em
+              padding: 0.5em 1em
+              width: 160px
+              
+              &.disabled
+                background-color: lighten(#f1f3f5, 20%)
+                border-color: lighten(#f1f3f5, 20%)
+                color: rgba(0, 0, 0, 0.5)
+                
 
       .workflow-action
         .help-text
