Markdown support and About page
Copied About page from the beta site

--- a/css/app.styl
+++ b/css/app.styl
@@ -2,6 +2,9 @@ html, body
   font: 400 15px/1.5 "Open Sans", Arial, sans-serif
   margin: 0
 
+body
+  background: url(./assets/classify-background.jpg) center center no-repeat
+  background-size: cover
 
 $reset-button
   background: transparent
