Force app to at least 100% vh

--- a/css/app.styl
+++ b/css/app.styl
@@ -1,6 +1,7 @@
 html, body
   font: 400 15px/1.5 "Open Sans", Arial, sans-serif
   margin: 0
+  min-height: 100vh
 
 body
   background: url(./assets/classify-background.jpg) center center no-repeat
