--- a/css/classify.styl
+++ b/css/classify.styl
@@ -2,9 +2,9 @@
   padding: 10em 3vw
 
   .classification
+    align-items: stretch
     display: flex
     justify-content: center
-    flex-wrap: wrap
     margin: 0 auto
     max-width: 1200px
 
@@ -48,23 +48,23 @@
             font-style: italic
             font-size: 0.8em
 
-    .questions-container
-      background-color: white
-      border-bottom-right-radius: 6px
-      border-top-right-radius: 6px
-      display: inline-flex
-      flex: 0 1 33%
-      flex-direction: column
-      justify-content: flex-start
-      max-width: 350px
-      padding: 1em
 
-      .batman-placeholder
-        height: 100px
-        margin: 1em auto
-        width: 100px
+.task-container
+  align-content: stretch
+  background-color: white
+  border-radius: 0 6px 6px 0
+  display: flex
+  flex: 0 1 33%
+  flex-direction: column
+  padding: 1em
 
-      .task-container
-        border-radius: 6px
-        height: 30em
-        margin-bottom: 1em
+.batman-placeholder
+  display: block
+  height: 100px
+  margin: 0 auto
+  width: 100px
+
+.field-guide
+  font-size: 13px
+  height: 180px
+  line-height: 1.5em
