--- a/css/task.styl
+++ b/css/task.styl
@@ -81,6 +81,8 @@
         color: rgba(0, 0, 0, 0.5)
 
 .workflow-action
+  width: 100%
+
   .help-text
     color: rgba(0, 0, 0, 0.5)
     font-style: italic
@@ -107,11 +109,12 @@
     padding: 1em
     text-align: center
     text-transform: capitalize
-    width: 22em
+    width: 100%
 
 .progress-bar
   display: flex
   justify-content: space-around
+  margin: 1em 0
 
   .progress-bar-button-container
     background-color: #d3dbe2
@@ -153,3 +156,6 @@
       top: -0.9em
       width: 26px
       z-index: 1
+
+.task-summary
+  min-height: 50%
