Remove cruft. Working progress bar

--- a/css/app.styl
+++ b/css/app.styl
@@ -16,6 +16,7 @@ $reset-button
   font: inherit
   line-height: inherit
   margin: 0
+  outline: none
   padding: 0
   position: relative
   text-decoration: none
