--- a/css/main.styl
+++ b/css/main.styl
@@ -5,12 +5,12 @@
 @require 'main-footer'
 
 @require 'dialog'
-@require 'forms'
 @require 'loading-indicator'
 @require 'tooltip'
 
 @require 'home'
 @require 'classify'
 @require 'task'
+@require 'progress-bar'
 
 @require 'secondary-page'
