Some footer content and styles. Begin loading state handling

--- a/css/main-footer.styl
+++ b/css/main-footer.styl
@@ -1,7 +1,20 @@
 .main-footer
-  background-color: black
+  align-items: center
+  background-color: #3a4959
+  color: #92a2b3
   display: flex
-  padding: 1em 3vw
+  flex-direction: column
+  justify-content: center
+  padding: 3em 3vw
 
-  .zooniverse-logotype
-    color: white
+  .zooniverse-logo
+    font-size: 4em
+
+  .markdown
+    p
+      font-size: 1.2em
+      font-weight: 400
+      max-width: 40em
+      text-align: center
+      -moz-osx-font-smoothing: grayscale
+      -webkit-font-smoothing: antialiased
