--- a/css/classify.styl
+++ b/css/classify.styl
@@ -1,4 +1,5 @@
 .classify-page
+  height: 100vh
   padding: 10em 3vw
 
   .classification
@@ -40,8 +41,8 @@
             font-size: 0.8em
             letter-spacing: 0.1em
             margin-right: 0.5em
-            outline: none
             padding: 0.075em 0.25em
+            width: 30px
 
           .playback-controls-label
             color: rgba(146, 175, 205, 0.3)
