--- a/css/task.styl
+++ b/css/task.styl
@@ -102,7 +102,7 @@
 
   .action-button
     @extends $reset-button
-    background-color: #3a4959
+    background-color: #c5c64e
     border-radius: 6px
     color: white
     font-size: 1em
