--- a/css/progress-bar.styl
+++ b/css/progress-bar.styl
@@ -48,6 +48,9 @@
       width: 26px
       z-index: 1
 
+      &:disabled
+        opacity: 1
+
     .skip-pseudo-button
       background-color: #d3dbe2
       height: 20px
