Begin favorites button. Publish script. More bugfixes

--- a/css/classify.styl
+++ b/css/classify.styl
@@ -2,6 +2,9 @@
   height: 100vh
   padding: 10em 3vw
 
+  .loading-indicator-icon
+    color: white
+
   .classification
     align-items: stretch
     display: flex
@@ -48,17 +51,6 @@
             color: rgba(146, 175, 205, 0.3)
             font-style: italic
             font-size: 0.8em
-
-
-.task-container
-  align-content: stretch
-  background-color: white
-  border-radius: 0 6px 6px 0
-  display: flex
-  flex: 0 1 33%
-  flex-direction: column
-  max-width: 350px
-  padding: 1em
 
 .batman-placeholder
   display: block
