--- a/css/task.styl
+++ b/css/task.styl
@@ -12,73 +12,83 @@
   opacity: 1
   transition: height 0.75s, opacity 0.75s ease-in-out
 
-.task
-  align-items: center
-  display: inline-flex
+.task-container
+  align-content: stretch
+  background-color: white
+  border-radius: 0 6px 6px 0
+  display: flex
+  flex: 0 1 33%
   flex-direction: column
-  height: 100%
-  justify-content: space-between
+  max-width: 350px
+  padding: 1em
 
-  .question
-    font-weight: 700
-    text-align: center
-
-  fieldset
-    border: none
-    margin: 2em 0
-    text-align: center
-
-    .number-input
-      background-color: transparent
-      border: none
-      font-size: 5.33em
-      text-align: center
-      vertical-align: middle
-      width: 45%
-
-    .minus-button, .plus-button
-      @extends $reset-button
-      background-color: #f8f8f8
-      border: solid 2px darken(#f8f8f8, 20%)
-      border-radius: 4px
-      color: black
-      font-size: 1.66em
-      height: 40px
-      outline: none
-      vertical-align: middle
-      width: 40px
-
-  .task-button
-    @extends $reset-button
-    background-color: lightgrey
-    border-radius: 6px
-    margin: 0.5em
-    outline: none
-    padding: 1em
-    text-align: center
-    width: 95%
-
-  .task-checkbox-container
+  .task
+    align-items: center
     display: inline-flex
-    flex-wrap: wrap
-    width: 100%
+    flex-direction: column
+    height: 100%
+    justify-content: space-between
 
-    .task-checkbox
-      background-color: #f1f3f5
-      border: solid 2px darken(#f1f3f5, 10%)
-      border-radius: 4px
-      box-sizing: border-box
-      color: #3a4959
-      display: block
-      font-size: 0.8em
+    .question
+      font-weight: 700
+      text-align: center
+
+    fieldset
+      border: none
+      margin: 2em 0
+      text-align: center
+
+      .number-input
+        background-color: transparent
+        border: none
+        font-size: 5.33em
+        text-align: center
+        vertical-align: middle
+        width: 45%
+
+      .minus-button, .plus-button
+        @extends $reset-button
+        background-color: #f8f8f8
+        border: solid 2px darken(#f8f8f8, 20%)
+        border-radius: 4px
+        color: black
+        font-size: 1.66em
+        height: 40px
+        outline: none
+        vertical-align: middle
+        width: 40px
+
+    .task-button
+      @extends $reset-button
+      background-color: lightgrey
+      border-radius: 6px
       margin: 0.5em
-      padding: 0.5em 1em
-      width: 160px
+      outline: none
+      padding: 1em
+      text-align: center
+      width: 95%
 
-      &.disabled
-        background-color: lighten(#f1f3f5, 20%)
-        border-color: lighten(#f1f3f5, 20%)
-        color: rgba(0, 0, 0, 0.5)
+    .task-checkbox-container
+      display: inline-flex
+      flex-wrap: wrap
+      width: 100%
+
+      .task-checkbox
+        background-color: #f1f3f5
+        border: solid 2px darken(#f1f3f5, 10%)
+        border-radius: 4px
+        box-sizing: border-box
+        color: #3a4959
+        display: block
+        font-size: 0.8em
+        margin: 0.5em
+        padding: 0.5em 1em
+        width: 160px
+
+        &.disabled
+          background-color: lighten(#f1f3f5, 20%)
+          border-color: lighten(#f1f3f5, 20%)
+          color: rgba(0, 0, 0, 0.5)
 
 .workflow-action
   width: 100%
@@ -114,5 +124,36 @@
   .finish-button
     margin-top: 1.75em
 
-.task-summary
-  min-height: 50%
+.task-summary-container
+  display: flex
+  flex-direction: column
+
+  .progress-bar
+    align-self: center
+
+  .task-summary
+    display: flex
+    flex: 1 1 325px
+    flex-direction: column
+    width: 100%
+
+    .task-summary-lists
+      flex: 1 0 auto
+
+      p
+        margin: 0
+
+      ul
+        margin: 0
+        padding: 0
+
+  .workflow-action
+    text-align: center
+
+    .favorite-button
+      @extends $reset-button
+      color: #3a4959
+
+    .next-video-button
+      background-color: #3a4959
+      margin-top: 1.75em
