--- a/css/main-footer.styl
+++ b/css/main-footer.styl
@@ -1,7 +1,7 @@
 .main-footer
   align-items: center
-  background-color: #3a4959
-  color: #92a2b3
+  background-color: $dark-blue
+  color: $medium-blue
   display: flex
   flex-direction: column
   justify-content: center
