--- a/css/main-header.styl
+++ b/css/main-header.styl
@@ -35,3 +35,10 @@
 
   .account-bar
     color: white
+
+  .login-bar
+
+    a, &:visited, &:active
+      color: white
+      text-decoration: none
+
