--- a/css/app.styl
+++ b/css/app.styl
@@ -38,3 +38,10 @@ $generic-heading
   letter-spacing: 0.1em
   opacity: 0.7
   text-transform: uppercase
+
+h1, h2, h3, h4, h5, h6, p
+  -moz-osx-font-smoothing: grayscale
+  -webkit-font-smoothing: antialiased
+
+.secret-button
+  @extends $reset-button
