Bugfixes and working user avatar

--- a/css/main-header.styl
+++ b/css/main-header.styl
@@ -34,10 +34,18 @@
         color: white
 
   .account-bar
+    align-items: center
     color: white
+    display: flex
+
+    .account-avatar
+      border-radius: 50%
+      height: calc(1em + 1.5vw)
+      margin: 0 1em
+      vertical-align: middle
+      width: calc(1em + 1.5vw)
 
   .login-bar
-
     a, &:visited, &:active
       color: white
       text-decoration: none
