--- a/css/app.styl
+++ b/css/app.styl
@@ -32,12 +32,12 @@ $reset-button
     cursor: inherit
     opacity: 0.3
 
-$generic-heading
-  font-size: 0.7em
-  font-weight: bold
-  letter-spacing: 0.1em
-  opacity: 0.7
-  text-transform: uppercase
+$reset-link
+  color: inherit
+  text-decoration: none
+
+  &:visited, &:active
+    color: inherit
 
 h1, h2, h3, h4, h5, h6, p
   -moz-osx-font-smoothing: grayscale
