--- a/css/task.styl
+++ b/css/task.styl
@@ -30,6 +30,7 @@
     fieldset
       border: none
       margin: 2em 0
+      max-width: 350px
       text-align: center
 
       .number-input
@@ -85,6 +86,7 @@
           color: rgba(0, 0, 0, 0.5)
 
 .workflow-action
+  max-width: 350px
   width: 100%
 
   .help-text
