--- a/css/classify.styl
+++ b/css/classify.styl
@@ -1,6 +1,9 @@
 .classify-page
   height: 100%
-  padding: 10em 3vw
+  padding: 10em 1em
+
+  @media screen and (max-width: 900px)
+    padding: 10em 0
 
   .loading-indicator-container
     align-items: center
@@ -17,19 +20,25 @@
   .classification
     align-items: stretch
     display: flex
-    flex-wrap: wrap
     justify-content: center
     margin: 0 auto
     max-width: 1200px
+
+    @media screen and (max-width: 900px)
+      flex-wrap: wrap
 
     .subject
       background-color: black
       border-bottom-left-radius: 6px
       border-top-left-radius: 6px
       display: inline-flex
-      flex: 0 1 66%
-      justify-content: center
+      flex: 1 1 auto
       max-width: 800px
+      min-width: 320px
+      width: 100%
+
+      @media screen and (max-width: 900px)
+        border-radius: 6px
 
       .video-container
         display: inline-flex
@@ -40,10 +49,21 @@
 
         video
           background-color: black
+          border-bottom-left-radius: 6px
+          border-top-left-radius: 6px
+          min-height: 581px
+
+          @media screen and (max-width: 900px)
+            border-radius: 6px 6px 0 0
+            min-height: 100%
 
         .playback-rate-controls
           bottom: -2em
           position: absolute
+
+          @media screen and (max-width: 900px)
+            bottom: 102.5%
+            left: 0.5em
 
           .playback-button
             @extends $reset-button
@@ -67,6 +87,9 @@
           position: absolute
           right: 0.5em
 
+          @media screen and (max-width: 900px)
+            bottom: 102.5%
+
           .tutorial-button
             @extends $reset-button
             color: $medium-blue
@@ -74,9 +97,16 @@
     .task-container
       background-color: white
       border-radius: 0 6px 6px 0
-      flex: 0 1 33%
+      box-sizing: border-box
+      flex: 1 1 auto
       max-width: 350px
+      min-width: 320px
       padding: 1em
+      width: 100%
+
+      @media screen and (max-width: 900px)
+        border-radius: 0 0 6px 6px
+        max-width: 800px
 
       .loading-indicator-icon
         color: black
