--- a/css/main-footer.styl
+++ b/css/main-footer.styl
@@ -39,8 +39,13 @@
     min-height: 175px
     padding: 1em 3vw
 
+    @media screen and (max-width: 900px)
+      flex-wrap: wrap
+      justify-content: flex-start
+
     .project-list-container
-      padding: 0 2em
+      padding: 0.5em 2em
+      white-space: nowrap
 
       h5
         margin: 0
@@ -68,12 +73,16 @@
     padding: 0.25em 3vw
     width: 100%
 
-    .markdown > p
-      line-height: 50px
-      margin: 0
+    .markdown
+      align-items: center
+      display: flex
+
+      p
+        margin: 0.5em 0.5em 0.5em 0
 
     .social-media-links
       line-height: 50px
+      min-width: 150px
 
       a
         margin-left: 1.5em
@@ -85,4 +94,4 @@
       @extends $reset-link
 
       &:hover
-        color: lighten(#808080, 20%)
+        color: lighten(#808080, 30%)
