--- a/css/slide-tutorial.styl
+++ b/css/slide-tutorial.styl
@@ -12,6 +12,7 @@
   .slide-tutorial-overlay
     background: rgba(0, 0, 0, 0.7)
     bottom: 0
+    cursor: pointer //necessary for onClick to work in iOS Safari!!
     left: 0
     position: fixed
     right: 0
@@ -37,7 +38,7 @@
       width: 60%
 
     @media screen and (max-width: 520px)
-      margin: 110px auto
+      margin: 0px auto 110px
       width: 90%
 
     .slide-tutorial-slide
@@ -60,12 +61,14 @@
 
     .slide-tutorial-close-button
       @extends $reset-button
+      cursor: pointer
       position: absolute
       right: 0.5em
       top: 0.5em
 
       img
         width: 1em
+        height: 1em
 
     .slide-tutorial-dots
       margin: 10px 0
