--- a/css/task.styl
+++ b/css/task.styl
@@ -16,22 +16,32 @@
   display: flex
   flex-direction: column
 
+  @media screen and (max-width: 400px)
+    display: block
+
   .task-individual
     align-items: center
     display: inline-flex
+    flex: 1 0 auto
     flex-direction: column
     height: 100%
     justify-content: space-between
 
     .question
+      flex: 1 0 auto
       font-weight: 700
       text-align: center
 
     fieldset
       border: none
+      flex: 1 0 auto
       margin: 2em 0
       max-width: 350px
       text-align: center
+      width: 100%
+
+      @media screen and (max-width: 400px)
+        margin: 0
 
       .number-input
         background-color: transparent
@@ -40,6 +50,9 @@
         text-align: center
         vertical-align: middle
         width: 45%
+
+        @media screen and (max-width: 400px)
+          width: 20%
 
       .minus-button, .plus-button
         @extends $reset-button
@@ -57,6 +70,7 @@
       @extends $reset-button
       background-color: lightgrey
       border-radius: 6px
+      flex: 1 0 auto
       margin: 0.5em
       outline: none
       padding: 1em
@@ -65,6 +79,7 @@
 
     .task-checkbox-container
       display: inline-flex
+      flex: 1 0 auto
       flex-wrap: wrap
       width: 100%
 
@@ -77,8 +92,17 @@
         display: block
         font-size: 0.8em
         margin: 0.5em
+        max-width: 160px
+        min-width: 130px
         padding: 0.5em 1em
-        width: 160px
+        width: 100%
+
+        @media screen and (max-width: 768px)
+          cursor: pointer // Fixing onClick in iOS Safari for input
+          width: initial
+
+          input
+            cursor: pointer
 
         &.disabled
           background-color: lighten($task-gray, 20%)
@@ -88,6 +112,9 @@
 .workflow-action
   max-width: 350px
   width: 100%
+
+  @media screen and (max-width: 768px)
+    flex: 1 0 auto
 
   .help-text
     color: rgba(0, 0, 0, 0.5)
